<resources>
    <string name="app_name" translatable="false">Conversa</string>
    <string name="description_info" translatable="false">Info</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="SEND">SEND</string>
    <string name="SIGN_IN">Login</string>
    <string name="SIGN_UP">Sign up</string>
    <string name="action_location">Locations</string>
    <string name="browse_categories">Browse categories</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="cancel">Cancel</string>
    <string name="category">Categories</string>
    <string name="chat_wall_message_hint">Write a message</string>
    <string name="close">close</string>
    <string name="confirm_email">We\'ll send you an email to %1s to reset your password</string>
    <string name="contact_number_title">Contact number</string>
    <string name="contacts_last_message_default">Message</string>
    <string name="contacts_last_message_image">Image</string>
    <string name="contacts_last_message_location">Location</string>
    <string name="contacts_last_message_video" translatable="false">Video</string>
    <string name="contacts_last_message_audio" translatable="false">Audio</string>
    <string name="delete_title_menu">Delete</string>
    <string name="delivery_title">Delivery</string>
    <string name="email">EMAIL</string>
    <string name="email_already_taken">Email is already taken</string>
    <string name="email_fail_sent">Couldn\'t find an account associated with this email!</string>
    <string name="email_sent">Password sent to your email address</string>
    <string name="fav_error">An error has occurred while setting commerce as favorite</string>
    <string name="forgot_password">forgot password?</string>
    <string name="have_account">Already have an account?</string>
    <string name="invalid_token_message">Token has expired.\nPlease login again.</string>
    <string name="language_spinner_title">Select language</string>
    <string name="link_title">Webpage</string>
    <string name="loading">Loading</string>
    <string name="locations_title">Locations</string>
    <string name="logout_message">Do you want to logout?</string>
    <string name="me">Me</string>
    <string name="logout_ok">Log Out</string>
    <string name="member_since">Since %1s</string>
    <string name="message_sent_error">Failed</string>
    <string name="message_sent_uploading">Uploading</string>
    <string name="message_sent_downloading">Downloading</string>
    <string name="message_sent_sending">Sending</string>
    <string name="message_sent">Sent</string>
    <string name="mute_title_menu">Mute</string>
    <string name="name_already_taken">Name is already taken</string>
    <string name="no_messages">No Messages</string>
    <string name="no_messages_description_one">When you have chats\nyou\'ll see them here</string>
    <string name="no_user_registered">No user registered with this email or password</string>
    <string name="number_of_followers" translatable="false">Favs</string>
    <string name="open_on_title">Open</string>
    <string name="password">PASSWORD</string>
    <string name="picture">Image</string>
    <string name="preferences__account">My Account</string>
    <string name="preferences__chats" translatable="false">Chats</string>
    <string name="preferences__help">Help \u0026 Support</string>
    <string name="preferences__notifications">Notifications \u0026 Sounds</string>
    <string name="preferences__share">Conversa is useful. You should share it.</string>
    <string name="privacy_politics_preference">Privacy Policy</string>
    <string name="profile_conversa_time_info_message">ConversaTime is the schedule by which we will be answering you through chat, but our goal is to serve 24hrs.</string>
    <string name="profile_conversa_time_info_title">What is ConversaTime?</string>
    <string name="profile_day_five">F</string>
    <string name="profile_day_four">Th</string>
    <string name="profile_day_one">M</string>
    <string name="profile_day_seven">Su</string>
    <string name="profile_day_six">S</string>
    <string name="profile_day_three">W</string>
    <string name="profile_day_two">T</string>
    <string name="name">NAME</string>
    <string name="token_expired_error">Token expired!</string>
    <string name="test_string">test string</string>
    <string name="terms_of_use_preference">Terms &amp; Conditions</string>
    <string name="summary_go_intent_preference">Conversa Official Site</string>
    <string name="string_signin_title_two">CHAT WITH LOCAL BUSINESS\nIN JUST SECONDS</string>
    <string name="string_signin_title_one">Chat to any business</string>
    <string name="string_signin_sign_up_business_two">BUSINESS? PRESS HERE</string>
    <string name="string_signin_sign_up_business_one">LOOKING TO SIGN UP YOUR</string>
    <string name="string_signin_are_you_new">ARE YOU NEW HERE?</string>
    <string name="string_signin_already_have_an_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="start_browsing">Start browsing</string>
    <string name="special_promo_title">Special promo</string>
    <string name="signup_password_regex_error">Password should contain at least one letter, one digit and a special character</string>
    <string name="signup_password_length_error">Password must contain at least six characters</string>
    <string name="signup_name_error">Name should contain more than 1 character in length</string>
    <string name="settings_using_conversa">I\'m using Conversa</string>
    <string name="settings_using_conversa_text">Chat now with %1$s, follow the link: %2$s</string>
    <string name="settings_title_menu">Account</string>
    <string name="settings_share_conversa">How do you want to share?</string>
    <string name="settings_password_succesful">Password changed</string>
    <string name="settings_password_error">We\'re sorry, password couldn\'t be changed. Please try again later</string>
    <string name="settings_email_succesful">Email changed</string>
    <string name="settings_email_error">We\'re sorry, email couldn\'t be changed. Please try again later</string>
    <string name="settings_body_conversa">I\'m using Conversa and it really works. You can chat directly with thousands of businesses and stores. Follow the link and download it: </string>
    <string name="settings">Settings</string>
    <string name="sett_preferences_default_title">Title</string>
    <string name="sett_preferences_default_description">Description</string>
    <string name="sett_help_agent_title">Conversa Agent</string>
    <string name="sett_help_support_title">Technical Support</string>
    <string name="sett_help_terms_privacy_title">Terms &amp; Privacy</string>
    <string name="sett_help_agent_message">Didn\'t found the business you were looking for? Chat with a Conversa Agent</string>
    <string name="sett_help_support_message">Issues with the app or something isn\'t running smoothly, chat with tech support</string>
    <string name="sett_help_terms_privacy_message">Concerns about your privacy or how we handle your data. Go ahead, read all the terms. We dare you.</string>
    <string name="sett_notification_sound_title">Sound</string>
    <string name="sett_notification_sound_summary">Play when receiving a notification</string>
    <string name="sett_notification_push_title">Push notifications</string>
    <string name="sett_notification_preview_title">Preview</string>
    <string name="sett_notification_preview_summary">Show notification</string>
    <string name="sett_notification_inapp_title">In-App notifications</string>
    <string name="sett_notification_inapp_sound_summary">Play when receiving a message</string>
    <string name="sett_notification_inapp_preview_summary">Show notification</string>
    <string name="sett_chat_quality_title">Upload quality</string>
    <string name="sett_chat_quality_default_entry">High</string>
    <string name="sett_chat_message_title">Messages</string>
    <string name="sett_chat_sound_title">Sound</string>
    <string name="sett_chat_message_sent_sound">Sound when sending</string>
    <string name="sett_chat_message_received_sound">Sound when receiving</string>
    <string name="sett_chat_message_sound_message">Play sound inside chat</string>
    <string name="sett_chat_message_quality">Sending images with higher quality uses more data</string>
    <string name="sett_account_privacy_title">Privacy</string>
    <string name="sett_account_password_title">Password</string>
    <string name="sett_account_logout_title">Log Out</string>
    <string name="sett_account_email_title">Email</string>
    <string name="sett_account_email_summary">Email address linked to this account</string>
    <string name="sett_account_clear_recent_title">Clear recent searches</string>
    <string name="sett_account_blocked_title">Blocked</string>
    <string name="sett_account_blocked_summary">Manage blocked users</string>
    <string name="sett_account_account_title">Account</string>
    <string name="selected_count">%1$d selected</string>
    <string name="select_location">Select the location your message will be delivered</string>
    <string name="search_title_menu">Search</string>
    <string name="search_no_results_found">No results found</string>
    <string name="search_results_error" translatable="false">Oops, I did it again</string>
    <string name="schedule_title">ConversaTime</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="recent_searches_ok">Clear</string>
    <string name="recent_searches_message">Clear recent searches</string>
    <string name="profile_no_website_message">Working on website</string>
    <string name="profile_no_number_message">No number available</string>
    <string name="profile_location_online_location">We are only present online</string>
    <string name="profile_location_one_location">We have one location, check it out on the map</string>
    <string name="profile_location_multiple_location">We have multiple locations, check them out on the map</string>
    <string name="profile_locations_info_message">When a business has a physical address, you can check out on the map and easily drive from where you are</string>
    <string name="sett_language_default_option">Default</string>
    <string name="preferences__language">Language</string>
    <string name="birthday">YOUR BIRTHDATE</string>
    <string name="gender">gender</string>
    <string name="signup_birthday_old_error">You must be at least 13 years old to use Conversa</string>
    <string name="send_password">Recover</string>
    <string name="FORGOT_PASSWORD">Forgot password</string>
    <string name="sett_help_help">Help/Support</string>
    <string name="sett_help_licences">Licences</string>
    <string name="sett_help_terms">Terms of use</string>
    <string name="profile_status_away">Away</string>
    <string name="profile_status_offline">Offline</string>
    <string name="profile_status_online">Online</string>
    <string name="profile_status_online_description">You get answers almost instantly, this is Conversa baby</string>
    <string name="profile_status_offline_description">We\'ll answer as soon as possible</string>
    <string name="profile_status_away_description">I\'ll be back, oh wait, I\'m not Terminator</string>
    <string name="how_to_get">How can I get a code?</string>
    <string name="share_next">Get one here:</string>
    <string name="get_code_Share">GET</string>
    <string name="info_get_code2">Or share this in FB or TW and \n don\'t forget to use the hashtags:</string>
    <string name="info_hashtags">#conversachat </string>
    <string name="info_get_code3">Our system will detect your \n post or tweet and  we\'ll send \n you a code via MD.</string>
</resources>