<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:title="@string/sett_account_account_title">

        <EditTextPreference
            android:title="@string/sett_account_email_title"
            android:defaultValue=""
            android:key="sett_account_email_key" />

        <EditTextPreference
            android:title="@string/sett_account_password_title"
            android:defaultValue=""
            android:key="sett_account_password_key" />

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/sett_account_privacy_title">

        <Preference
            android:title="@string/sett_account_clear_recent_title"
            android:key="sett_account_clear_recent_key" />

        <Preference
            android:title="@string/sett_account_blocked_title"
            android:summary="@string/sett_account_blocked_summary"
            android:key="sett_account_blocked_key" />

        <Preference
            android:title="@string/sett_account_logout_title"
            android:key="sett_account_logout_key" />

    </PreferenceCategory>
</PreferenceScreen>