<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/sett_chat_message_title">
        <Preference
            android:key="sett_chat_quality_key"
            android:title="@string/sett_chat_quality_title"
            android:summary="@string/sett_chat_quality_default_entry" />
        <ee.app.conversa.view.SwitchCompatPreference
            android:key="sett_chat_message_sent_sound_key"
            android:title="@string/sett_chat_message_sent_sound"
            android:defaultValue="true" />
        <ee.app.conversa.view.SwitchCompatPreference
            android:key="sett_chat_message_received_sound_key"
            android:title="@string/sett_chat_message_received_sound"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>