<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp">
        <View
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/circular_status_online"
            android:layout_width="12dp"
            android:layout_height="12dp" />
        <ee.app.conversa.view.MediumTextView
            android:text="@string/profile_status_online"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ee.app.conversa.view.RegularTextView
        android:text="@string/profile_status_online_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp">
        <View
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/circular_status_away"
            android:layout_width="12dp"
            android:layout_height="12dp" />
        <ee.app.conversa.view.MediumTextView
            android:text="@string/profile_status_away"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ee.app.conversa.view.RegularTextView
        android:text="@string/profile_status_away_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp">
        <View
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:background="@drawable/circular_status_offline"
            android:layout_width="12dp"
            android:layout_height="12dp" />
        <ee.app.conversa.view.MediumTextView
            android:text="@string/profile_status_offline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ee.app.conversa.view.RegularTextView
        android:text="@string/profile_status_offline_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>