<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	android:focusableInTouchMode="true"
	android:background="@color/default_white"
	tools:context="ee.app.conversa.ActivitySignUp" >

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content" >

		<ee.app.conversa.view.BoldTextView
			android:id="@+id/btvTitle"
			android:text="@string/SIGN_UP"
			android:layout_marginTop="40dp"
			android:textSize="18sp"
			android:layout_gravity="center_horizontal"
			android:textColor="@color/default_black"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />

		<android.support.design.widget.TextInputLayout
			android:layout_marginTop="14dp"
			android:id="@+id/tilEmailSignUp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="14dp" >

			<EditText
				android:id="@+id/etSignUpEmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@null"
				android:gravity="bottom"
				android:hint="@string/email"
				android:inputType="textEmailAddress"
				android:textColor="@color/default_black"
				android:textColorHint="@color/default_gray"
				android:textSize="18sp" />
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/tilPasswordSignUp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="14dp" >

			<EditText
				android:id="@+id/etSignUpPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@null"
				android:gravity="bottom"
				android:hint="@string/password"
				android:inputType="textPassword"
				android:textColor="@color/default_black"
				android:textColorHint="@color/default_gray"
				android:textSize="18sp" />
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/tilBirthdaySignUp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="14dp" >

			<EditText
				android:id="@+id/etSignUpBirthday"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@null"
				android:gravity="bottom"
				android:hint="@string/birthday"
				android:inputType="none"
				android:textColor="@color/default_black"
				android:textColorHint="@color/default_gray"
				android:textSize="18sp" />
		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:id="@+id/tilGenderSignUp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="14dp" >

			<EditText
				android:id="@+id/etSignUpGender"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@null"
				android:gravity="bottom"
				android:hint="@string/gender"
				android:inputType="none"
				android:textColor="@color/default_black"
				android:textColorHint="@color/default_gray"
				android:textSize="18sp" />
		</android.support.design.widget.TextInputLayout>

		<Button
			android:id="@+id/btnSignUpUp"
			android:layout_width="175dp"
			android:layout_height="35dp"
			android:layout_gravity="center"
			android:layout_marginTop="22dp"
			android:gravity="center"
			android:text="@string/SIGN_UP"
			android:textColor="@drawable/textcolor_white_state"
			android:textSize="20sp"
			android:background="@drawable/button_shape_white" />

		<include android:id="@+id/rlNoInternetNotification"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="gone"
			layout="@layout/no_internet_notification" />

	</LinearLayout>

</ScrollView>