<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/terms"
        android:text="@string/sett_help_terms"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle" />

    <View
        android:id="@+id/vDivider"
        android:layout_above="@id/terms"
        android:layout_width="match_parent"
        android:background="@drawable/divider"
        android:layout_height="0.5dp"/>

    <Button
        android:id="@+id/help"
        android:layout_above="@id/vDivider"
        android:text="@string/sett_help_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle" />

    <View
        android:id="@+id/vDividerTwo"
        android:layout_above="@id/help"
        android:layout_width="match_parent"
        android:background="@drawable/divider"
        android:layout_height="0.5dp"/>

    <FrameLayout
        android:layout_above="@id/vDividerTwo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/help_pattern" >
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="110dp"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/ivAppIcon"
                android:src="@drawable/signin_image"
                android:layout_width="match_parent"
                android:layout_height="110dp" />
            <Button
                android:id="@+id/btnLicences"
                android:text="@string/sett_help_licences"
                android:gravity="center_horizontal"
                android:layout_below="@id/ivAppIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                style="?android:attr/buttonBarButtonStyle" />
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>