<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
	android:focusableInTouchMode="true"
	android:gravity="center_horizontal"
	android:layout_marginEnd="7dp"
	android:layout_marginLeft="7dp"
	android:layout_marginRight="7dp"
	android:layout_marginStart="7dp"
    tools:context="ee.app.conversa.ActivityForgotPassword" >

	<ee.app.conversa.view.BoldTextView
		android:id="@+id/btvTitle"
		android:text="@string/FORGOT_PASSWORD"
		android:layout_marginTop="40dp"
		android:textSize="18sp"
		android:textAllCaps="true"
		android:textColor="@color/black"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />

	<android.support.design.widget.TextInputLayout
		android:layout_marginTop="14dp"
		android:layout_below="@id/btvTitle"
		android:id="@+id/tilPasswordForgot"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/MyTheme.Gray"
		android:paddingTop="7dp"
		android:paddingEnd="14dp"
		android:paddingLeft="14dp"
		android:paddingStart="14dp"
		android:paddingRight="14dp" >

		<EditText
			android:id="@+id/etSendEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="bottom"
			android:hint="@string/email"
			android:imeOptions="actionDone"
			android:textCursorDrawable="@null"
			android:inputType="textEmailAddress"
			android:textColor="@color/black"
			android:textColorHint="@color/gray"
			android:textSize="14sp" />
	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/btnSendPassword"
		android:layout_width="175dp"
		android:layout_height="35dp"
		android:layout_below="@id/tilPasswordForgot"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="49dp"
		android:gravity="center"
		android:text="@string/send_password"
		android:enabled="false"
		android:textColor="@drawable/textcolor_white_state"
		android:textSize="14sp"
		android:background="@drawable/button_shape_white" />

	<include layout="@layout/no_internet_notification"
		android:id="@+id/rlNoInternetNotification"
		android:visibility="gone" />

</RelativeLayout>