<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@android:color/white"
    tools:context="ee.app.conversa.ActivityGetCode" >



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <LinearLayout
                android:id="@+id/rlTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="7dp">

                <pl.droidsonroids.gif.GifTextView
                    android:id="@+id/gtvGif"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="50dp"
                    android:background="@drawable/get_code_gif" />

                <ee.app.conversa.view.MediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/how_to_get"
                    android:textColor="@color/black_text"
                    android:textSize="18dp"
                    android:textStyle="bold" />


                <ee.app.conversa.view.MediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/share_next"
                    android:textColor="@color/black"
                    android:textSize="15dp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/btnGetCode"
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_shape_green_border"
                    android:gravity="center"
                    android:paddingEnd="7dp"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:paddingStart="7dp"
                    android:text="@string/get_code_Share"
                    android:textColor="@drawable/textcolor_green_state"
                    android:textSize="14sp" />

                <!--<ee.app.conversa.view.MediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/info_get_code1"
                    android:textColor="@color/black"
                    android:textSize="12dp"
                    android:textStyle="bold" />-->

                <ee.app.conversa.view.MediumTextView
                    android:id="@+id/ltvShareThis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/info_get_code2"
                    android:textColor="@color/black"
                    android:textSize="13dp" />

                <ee.app.conversa.view.MediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/info_hashtags"
                    android:textColor="@color/green"
                    android:textStyle="bold"
                    android:textSize="13dp"/>

                <ee.app.conversa.view.MediumTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/info_get_code3"
                    android:textColor="@color/black"
                    android:textSize="13dp" />


            </LinearLayout>


            <!-- <ImageView
                android:id="@+id/ivAppIcon"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:scaleType="centerInside"
                android:src="@drawable/im_logo" />-->


        </RelativeLayout>
    </FrameLayout>


    </RelativeLayout>